--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ NEWSAPI_KEY=75b802ccc803409b9d2ff730df11c733
 TELEGRAM_TOKEN=7595723761:AAE51oW9XFrvCpqcq83yx-q9XkCNKUKvKJA
 CHAT_ID=846561600
 DATABASE=news.json
+NEWS_KEYWORD=BPJS Ketenagakerjaan
